syntax = "proto3";

package internal;

option go_package = "gitlab.com/gitlab-org/gitaly/internal/proto";

import "shared.proto";

// InternalGitaly is a gRPC service meant to be served by a Gitaly node, but
// only reachable by Praefect or other Gitalies
service InternalGitaly {
  // WalkRepos walks the storage and streams back all known git repos on the
  // requested storage
  rpc WalkRepos (WalkReposRequest) returns (stream WalkReposResponse) {
    option (gitaly.op_type) = {
      op:          ACCESSOR
      scope_level: STORAGE
    };
  }
}

message WalkReposRequest {
  string storage_name = 1 [(gitaly.storage)=true];
}

message WalkReposResponse {
  string relative_path = 1;
}
